# epub-summary

./: .gitignore  README.md  pyproject.toml
scratch_space/epub_/: load.ipynb  revise.ipynb  utils_dev.ipynb
src/epub_summary/config/: epub_summary_config.py  epub_summary_paths.py
src/epub_summary/epubber/: epub.py  utils.py
src/epub_summary/summarizer/: reviser.py
tests/config/: test_env_vars.py  test_epub_summary_paths.py
tests/epubber/: test_chapter_finder.py
