[tool.poetry]
name = "epub-summary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "epub_summary", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
rich = "^13.9.3"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pytest-cov = "^5.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
]
